ASSIGNMENT-4/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
../Src/my_led.c:3:13: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'on'
    3 |  *  Created on: Dec 17, 2025
      |             ^~
In file included from C:\ST\STM32CubeIDE_1.19.0\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344\tools\bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/include/stdint.h:14,
                 from C:\ST\STM32CubeIDE_1.19.0\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344\tools\bin/../lib/gcc/arm-none-eabi/13.3.1/include/stdint.h:9,
                 from ../Inc/my_led.h:11,
                 from ../Src/my_led.c:7:
C:\ST\STM32CubeIDE_1.19.0\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344\tools\bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/include/sys/_stdint.h:20:9: error: unknown type name '__int8_t'
   20 | typedef __int8_t int8_t ;
      |         ^~~~~~~~
make: *** [Src/subdir.mk:37: Src/my_led.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

10:53:14 Build Failed. 3 errors, 0 warnings. (took 576ms)

10:53:15 **** Incremental Build of configuration Debug for project Q.3 ****
make -j12 all 
arm-none-eabi-gcc "../Src/my_led.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/my_led.d" -MT"Src/my_led.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/my_led.o"
../Src/my_led.c:3:13: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'on'
    3 |  *  Created on: Dec 17, 2025
      |             ^~
In file included from C:\ST\STM32CubeIDE_1.19.0\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344\tools\bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/include/stdint.h:14,
                 from C:\ST\STM32CubeIDE_1.19.0\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344\tools\bin/../lib/gcc/arm-none-eabi/13.3.1/include/stdint.h:9,
                 from ../Inc/my_led.h:11,
                 from ../Src/my_led.c:7:
C:\ST\STM32CubeIDE_1.19.0\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344\tools\bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/include/sys/_stdint.h:20:9: error: unknown type name '__int8_t'
   20 | typedef __int8_t int8_t ;
      |         ^~~~~~~~
make: *** [Src/subdir.mk:37: Src/my_led.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
10:53:15 **** Incremental Build of configuration Debug for project Q.3 ****
make -j12 all 
arm-none-eabi-gcc "../Src/my_led.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/my_led.d" -MT"Src/my_led.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/my_led.o"
../Src/my_led.c:3:13: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'on'
    3 |  *  Created on: Dec 17, 2025
      |             ^~
In file included from C:\ST\STM32CubeIDE_1.19.0\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344\tools\bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/include/stdint.h:14,
                 from C:\ST\STM32CubeIDE_1.19.0\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344\tools\bin/../lib/gcc/arm-none-eabi/13.3.1/include/stdint.h:9,
                 from ../Inc/my_led.h:11,
                 from ../Src/my_led.c:7:
C:\ST\STM32CubeIDE_1.19.0\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344\tools\bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/include/sys/_stdint.h:20:9: error: unknown type name '__int8_t'
   20 | typedef __int8_t int8_t ;
      |         ^~~~~~~~
make: *** [Src/subdir.mk:37: Src/my_led.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
